[az] update from Pootle (firefox)

--- a/az/browser/chrome/browser/devtools/webconsole.properties
+++ b/az/browser/chrome/browser/devtools/webconsole.properties
@@ -182,6 +182,7 @@ timeEnd=%1$S: %2$Sms
 
 # LOCALIZATION NOTE (table.index, table.iterationIndex, table.key, table.value):
 # the column header displayed in the console table widget.
+table.value=Dəyərlər
 
 # LOCALIZATION NOTE (severity.error, severity.warn, severity.info, severity.log):
 # tooltip for icons next to console output
