--- a/az/security/manager/chrome/pipnss/nsserrors.properties
+++ b/az/security/manager/chrome/pipnss/nsserrors.properties
@@ -201,10 +201,10 @@ SEC_ERROR_KEYGEN_FAIL=Xüsusi və ümumi açar cütlüyü yarıla bilmir.
 SEC_ERROR_BAD_NICKNAME=Təsdiq sənədi ləqəbi hazırda istifadə olunur.
 SEC_ERROR_NOT_FORTEZZA_ISSUER=Həmkarın FORTEZZA zəncirinə saf FORTEZZA olmayan təsdiq sənədi daxildir.
 SEC_ERROR_CANNOT_MOVE_SENSITIVE_KEY=Həssas bir açar lazım olan slot saxlana bilmir.
-SEC_ERROR_JS_INVALID_MODULE_NAME=Etibarsız kəmiyyət adı.
-SEC_ERROR_JS_INVALID_DLL=Etibarsız kəmiyyət yolu və ya fayl adı
-SEC_ERROR_JS_ADD_MOD_FAILURE=Kəmiyyət əlavə edilə bilmir
-SEC_ERROR_JS_DEL_MOD_FAILURE=Kəmiyyət silinə bilmir
+SEC_ERROR_JS_INVALID_MODULE_NAME=Etibarsız modul adı.
+SEC_ERROR_JS_INVALID_DLL=Etibarsız modul yolu və ya fayl adı
+SEC_ERROR_JS_ADD_MOD_FAILURE=Modul əlavə edilə bilmir
+SEC_ERROR_JS_DEL_MOD_FAILURE=Modul silinə bilmir
 SEC_ERROR_OLD_KRL=Yeni ləğv edilmiş açarlar siyahısının tarixi hazırkından yeni deyil.
 SEC_ERROR_CERT_NOT_IN_NAME_SPACE=Bu təsdiq sənədinin rəsmisinin adı ilə yayımlamağa icazə verilmir.
 SEC_ERROR_KRL_NOT_YET_VALID=Bu təsdiq sənədinin ləğv edilmiş açarlar siyahısı hələki etibarlı deyil.
@@ -229,7 +229,7 @@ SEC_ERROR_OCSP_FUTURE_RESPONSE=OCSP cavabı hələki aktiv deyil, çünki gələ
 SEC_ERROR_OCSP_OLD_RESPONSE=OCSP cavabına vaxtı çıxmış məlumat daxildir.
 SEC_ERROR_DIGEST_NOT_FOUND=İmzalanan cavabda CMS ya da PKCS #7 xülasəsi tapılmadı.
 SEC_ERROR_UNSUPPORTED_MESSAGE_TYPE=CMS ya da PKCS #7 cavabı formatı dəstəkləmir.
-SEC_ERROR_MODULE_STUCK=PKCS #11 kəmiyyəti silinə bilmir çünki istifadə olunur.
+SEC_ERROR_MODULE_STUCK=PKCS #11 modulu silinə bilmir çünki hazırda istifadə olunur.
 SEC_ERROR_BAD_TEMPLATE=ASN.1 məlumatı açıla bilmir. Göstərilən qəlib etibarsızdır.
 SEC_ERROR_CRL_NOT_FOUND=Uyğun gələn ləğv edilmişlər siyahısı tapılmadı.
 SEC_ERROR_REUSED_ISSUER_AND_SERIAL=Mövcud olan bir təsdiq sənədi ilə eyni seriyaya və eyni yayımlayıcıya məxus yeni bir təsdiq sənədini idxal etmək istəyirsiniz, ancaq bu sənədlər eyni deyil.
