--- a/az/security/manager/chrome/pipnss/pipnss.properties
+++ b/az/security/manager/chrome/pipnss/pipnss.properties
@@ -256,10 +256,10 @@ PKCS12UnknownErrBackup=Naməlum səbəblərə görə PKCS #12 ehtiyatlama faylı
 PKCS12UnknownErr=PKCS #12 əməliyyatı naməlum səbəblərə görə uğursuz oldu.
 PKCS12InfoNoSmartcardBackup=Ağıllı kart kimi təhlükəsizlik cihazından sertifikatları ehtiyatlamaq mümkün deyil.
 PKCS12DupData=Sertifikat və şəxsi açar hazırda təhlükəsizlik cihazında mövcuddur.
-AddModuleFailure=Kəmiyyət əlavə edilə bilmir
+AddModuleFailure=Modul əlavə edilə bilmir
 AddModuleDup=Təhlükəsizlik modulu daha əvvəl quraşdırılıb
 DelModuleWarning=Bu təhlükəsizlik modulunu silmək istədiyinizə əminsiniz?
-DelModuleError=Kəmiyyət silinə bilmir
+DelModuleError=Modul silinə bilmir
 AVATemplate=%S = %S
 
 PSMERR_SSL_Disabled=Təhlükəsiz olaraq bağlanıla bilmir, çünki SSL əlaqə qaydası söndürülüb.
