--- a/az/toolkit/chrome/global/devtools/gcli.properties
+++ b/az/toolkit/chrome/global/devtools/gcli.properties
@@ -213,7 +213,7 @@ prefOutputFilter=Filtr
 # LOCALIZATION NOTE (prefOutputName, prefOutputValue): These strings are
 # displayed in the output from the 'pref list' command as table headings.
 prefOutputName=Ad
-prefOutputValue=Kəmiyyət
+prefOutputValue=Dəyər
 
 # LOCALIZATION NOTE (introDesc, introManual): These strings describe the
 # 'intro' command. The localization of 'Got it!' should be the same used in
