[az] update from Pootle (firefox-beta)

--- a/az/browser/chrome/browser/devtools/webconsole.properties
+++ b/az/browser/chrome/browser/devtools/webconsole.properties
@@ -198,6 +198,7 @@ remoteWebConsolePromptTitle=Uzaq Əlaqə
 
 # LOCALIZATION NOTE (table.index, table.iterationIndex, table.key, table.value):
 # the column header displayed in the console table widget.
+table.value=Dəyərlər
 
 # LOCALIZATION NOTE (severity.error, severity.warn, severity.info, severity.log):
 # tooltip for icons next to console output
