--- a/az/dom/chrome/accessibility/AccessFu.properties
+++ b/az/dom/chrome/accessibility/AccessFu.properties
@@ -88,6 +88,9 @@ mathmlsquareroot         = kökaltı
 textarea       =       mətn sahəsi
 
 base           =       oturacaq
+close-fence    =       çəpər qapatılır
+denominator    =       bölən
+numerator      =       bölünən
 root-index     =       kök indeksi
 
 # Text input types
