--- a/az/browser/chrome/browser/devtools/appcacheutils.properties
+++ b/az/browser/chrome/browser/devtools/appcacheutils.properties
@@ -59,6 +59,7 @@ fileChangedButNotManifest=The file %1$S was modified after %2$S. Unless the text
 
 # LOCALIZATION NOTE (cacheDisabled): it's used when the cache is disabled and
 # an attempt is made to view offline data.
+cacheDisabled=Sizin keşiniz söndürülüb. Lütfən about:config bölümündə browser.cache.disk.enable dəyərini true edin və təkrar yoxlayın.
 
 # LOCALIZATION NOTE (firstLineMustBeCacheManifest): the associated cache
 # manifest has a first line that is not "CACHE MANIFEST". Parameters: %S is
