--- a/az/toolkit/chrome/global/aboutWebrtc.properties
+++ b/az/toolkit/chrome/global/aboutWebrtc.properties
@@ -30,7 +30,7 @@ debug_mode_on_state_msg = sazlama rejimi aktivdir, izləmə qeydiyyatı: %1$S
 aec_logging_msg_label = AEC Qeydiyyatı
 aec_logging_off_state_label = AEC Qeydiyyatını başlat
 aec_logging_on_state_label = AEC Qeydiyyatını dayandır
-aec_logging_on_state_msg = AEC qeydiyyatı aktivdir (zəng edənlə bir neçə dəqiqə danışdıqdan sonra qeydiyyatı dayandırın)
+aec_logging_on_state_msg = AEC qeydiyyatı aktivdir (zəng edənlə bir neçə dəqiqə danışdıqdan sonra qeydiyaytı dayandırın)
 
 # LOCALIZATION NOTE (aec_logging_off_state_msg):
 # %1$S will be replaced by the full path to the directory containing the captured log files.
@@ -40,45 +40,80 @@ aec_logging_off_state_msg = çəkilmiş qeyd faylları burada saxlanılır: %1$S
 # LOCALIZATION NOTE (peer_connection_id_label): "PeerConnection" is a proper noun
 # associated with the WebRTC module. "ID" is an abbreviation for Identifier. This string
 # should not normally be translated and is used as a data label.
+peer_connection_id_label = PeerConnection ID
 
 # LOCALIZATION NOTE (sdp_heading, local_sdp_heading, remote_sdp_heading):
 # "SDP" is an abbreviation for Session Description Protocol, an IETF standard.
 # See http://wikipedia.org/wiki/Session_Description_Protocol
+sdp_heading = SDP
+local_sdp_heading = Lokal SDP
+remote_sdp_heading = Uzaq SDP
 
 # LOCALIZATION NOTE (rtp_stats_heading): "RTP" is an abbreviation for the
 # Real-time Transport Protocol, an IETF specification, and should not
 # normally be translated. "Stats" is an abbreviation for Statistics.
+rtp_stats_heading = RTP Statistikaları
 
 # LOCALIZATION NOTE (ice_state, ice_stats_heading): "ICE" is an abbreviation
 # for Interactive Connectivity Establishment, which is an IETF protocol,
 # and should not normally be translated. "Stats" is an abbreviation for
 # Statistics.
+ice_state = ICE statusu
+ice_stats_heading = ICE Statistikaları
 
 # LOCALIZATION NOTE (av_sync_label): "A/V" stands for Audio/Video.
 # "sync" is an abbreviation for sychronization. This is used as
 # a data label.
+av_sync_label = A/V sinxronizasiyası
 
 # LOCALIZATION NOTE (jitter_buffer_delay_label): A jitter buffer is an
 # element in the processing chain, see http://wikipedia.org/wiki/Jitter
 # This is used as a data label.
+jitter_buffer_delay_label = Jitter-buffer gecikməsi
 
 # LOCALIZATION NOTE (avg_bitrate_label, avg_framerate_label): "Avg." is an abbreviation
 # for Average. These are used as data labels.
+avg_bitrate_label = Ort. bit sürəti
+avg_framerate_label = Ort. kadr sürəti
 
 # LOCALIZATION NOTE (local, remote): These adjectives are used to label a
 # line of statistics collected for a peer connection. The data represents
 # either the local or remote end of the connection.
+local = lokal
+remote = uzaq
 
 # LOCALIZATION NOTE (nominated): This adjective is used to label a table column.
 # Cells in this column contain the localized javascript string representation of "true"
 # or are left blank.
+nominated = Namizəd
 
 # LOCALIZATION NOTE (selected): This adjective is used to label a table column.
 # Cells in this column contain the localized javascript string representation of "true"
 # or are left blank. This represents an attribute of an ICE candidate.
+selected = Seçilib
 
 save_page_label = Səhifəni Yadda Saxla
+debug_mode_msg_label = Sazlama Modu
+debug_mode_off_state_label = Sazlama Modunu Başlat
+debug_mode_on_state_label = Sazlama Modunu dayandır
+log_heading = Bağlantı qeydləri
+log_show_msg = qeydləri göstər
+log_hide_msg = qeydləri gizlə
 connection_closed = bağlanıb
+local_candidate = Lokal Namizəd
+remote_candidate = Uzaq Namizəd
+priority = Üstünlük
+fold_show_msg = detalları göstər
+fold_show_hint = bu bölməni genişlətmək üçün klikləyin
+fold_hide_msg = detalları gizlə
+fold_hide_hint = bu bölməni daraltmaq üşün klikləyin
+dropped_frames_label = Buraxılmış kadrlar
+discarded_packets_label = Atılan paketlər
+decoder_label = Dekodlaşdırıcı
+encoder_label = Kodlaşdırıcı
 received_label = Alındı
+packets = paket
+lost_label = İtmiş
+jitter_label = Jitter
 sent_label = Göndərildi
 
