[az] update from Pootle (firefox-beta)

--- a/az/browser/chrome/browser/browser.properties
+++ b/az/browser/chrome/browser/browser.properties
@@ -272,7 +272,7 @@ tabHistory.goBack=Bu səhifəyə geri qayıt
 tabHistory.goForward=Bu səhifəyə keç
 
 # URL Bar
-pasteAndGo.label=Yapışdır ve aç
+pasteAndGo.label=Yapışdır və Aç
 
 # Block autorefresh
 refreshBlocked.goButton=İcazə ver
