[ach] update from Pootle (firefox-beta)

--- a/ach/browser/chrome/browser/browser.properties
+++ b/ach/browser/chrome/browser/browser.properties
@@ -83,6 +83,7 @@ addonLocalInstallError-1=Med-ikome man pe onongo twero kete pi bal pwail me nyon
 addonLocalInstallError-2=Med-ikome man pe onongo twero kete pien pe rwate ki med-ikome %1$S ma kibedo ka kuro.
 addonLocalInstallError-3=Med-ikome man pe onongo twero kete pien nen calo obale woko.
 addonLocalInstallError-4=%2$S pe onongo twero kete pien %1$S pe romo yubo pwail ma mite.
+addonLocalInstallError-5=Med-ikome man pe onongo twero kete pien pe ki moko ada ne.
 
 # LOCALIZATION NOTE (addonInstallErrorIncompatible):
 # %1$S is the application name, %2$S is the application version, %3$S is the add-on name
