[ach] update from Pootle (firefox-beta)

--- a/ach/browser/chrome/browser/browser.properties
+++ b/ach/browser/chrome/browser/browser.properties
@@ -552,6 +552,7 @@ getUserMedia.shareScreen.message = I mito nywako wang kompiuta ni ki %S?
 getUserMedia.shareCameraAndMicrophone.message = I mito nywako lamak cal kacel ki micropon mamegi ki %S?
 getUserMedia.shareCameraAndAudioCapture.message = I mito nywako lamak cal mamegi ki dwon me tab man ki %S?
 getUserMedia.shareScreenAndMicrophone.message = I mito nywako micropon ni ki %S?
+getUserMedia.shareScreenAndAudioCapture.message = I mito nywako dwon me dirica matidi man ki kio ni ki %S?
 getUserMedia.shareAudioCapture.message = I mito nywako dwon me tab man ki %S?
 getUserMedia.selectWindow.label=Dirica me anywaka:
 getUserMedia.selectWindow.accesskey=D
@@ -645,6 +646,7 @@ getUserMedia.sharingMenuCameraMicrophoneWindow = %S (camera, microphone and wind
 getUserMedia.sharingMenuCameraMicrophoneBrowser = %S (lamak cal, mikropon ki tab)
 getUserMedia.sharingMenuCameraAudioCapture = %S (lamak cal ki dwon me tab)
 getUserMedia.sharingMenuCameraAudioCaptureApplication = %S (lamak cal, dwon me tab ki purugram)
+getUserMedia.sharingMenuCameraAudioCaptureScreen = %S (lamak cal, dwon me dirica matidi ki kio)
 getUserMedia.sharingMenuCameraAudioCaptureWindow = %S (lamak cal, dwon me tab ki dirica)
 getUserMedia.sharingMenuCameraAudioCaptureBrowser = %S (lamak cal, dwon me tab ki tab)
 getUserMedia.sharingMenuCameraApplication = %S (camera and application)
