--- a/ach/browser/chrome/browser/devtools/inspector.properties
+++ b/ach/browser/chrome/browser/devtools/inspector.properties
@@ -66,10 +66,12 @@ docsTooltip.visitMDN=Lim potbuk me MDN
 # LOCALIZATION NOTE (inspector.collapsePane): This is the tooltip for the button
 # that collapses the right panel (rules, computed, box-model, etc...) in the
 # inspector UI.
+inspector.collapsePane=Jwik dirica
 
 # LOCALIZATION NOTE (inspector.expandPane): This is the tooltip for the button
 # that expands the right panel (rules, computed, box-model, etc...) in the
 # inspector UI.
+inspector.expandPane=Ya dirica
 
 # LOCALIZATION NOTE (inspector.searchResultsCount): This is the label that
 # will show up next to the inspector search box. %1$S is the current result
