--- a/ach/browser/chrome/browser/devtools/jsonview.properties
+++ b/ach/browser/chrome/browser/devtools/jsonview.properties
@@ -30,6 +30,7 @@ jsonViewer.Copy=Lok
 
 # LOCALIZATION NOTE (jsonViewer.PrettyPrint): Label for JSON
 # pretty print action button.
+jsonViewer.PrettyPrint=Goc maleng
 
 # LOCALIZATION NOTE (jsonViewer.reps.more): Label used in arrays
 # that have more items than displayed.
