--- a/ach/browser/chrome/browser/devtools/webide.properties
+++ b/ach/browser/chrome/browser/devtools/webide.properties
@@ -83,3 +83,4 @@ device_reset_default=Nwo tero i makwongo
 
 # Simulator options
 simulator_custom_device=Yiko
+simulator_default_profile=Tii ki makwongo
