--- a/ach/browser/chrome/browser/devtools/markers.properties
+++ b/ach/browser/chrome/browser/devtools/markers.properties
@@ -67,6 +67,7 @@ marker.value.DOMEventBubblingPhase=Twak bwoyo
 
 # LOCALIZATION NOTE (marker.gcreason.label.*):
 # These strings are used to give a concise but readable description of a GC reason.
+marker.gcreason.label.LAST_DITCH=kakano pe tye
 marker.gcreason.label.DOM_IPC=IPC
 
 # LOCALIZATION NOTE (marker.gcreason.description.*):
