[ach] update from Pootle (firefox-beta)

--- a/ach/browser/chrome/browser/devtools/webide.properties
+++ b/ach/browser/chrome/browser/devtools/webide.properties
@@ -19,6 +19,7 @@ importPackagedApp_title=Yer lacim yoo
 importHostedApp_title=Yab purugram ma iye lapok tic
 importHostedApp_header=Ket lanyut me URL
 
+selectCustomProfile_title=Yer propwail makiyubo me Gaia
 
 notification_showTroubleShooting_label=Yubo bal
 notification_showTroubleShooting_accesskey=T
@@ -43,7 +44,7 @@ error_cantConnectToApp=Pe twero kube ki purugram: %1$S
 # Variable: error message (in english)
 error_cantFetchAddonsJSON=Pe twero omo nying med-ikome: %S
 
-error_appProjectsLoadFailed=Pe twero cano nying tic. Man romo time ka i tiyo ki profile man kacel ki kit Firefox manyen.
+error_appProjectsLoadFailed=Pe twero cano nying tic. Man romo time ka i tiyo ki propwail man kacel ki kit Firefox manyen.
 
 # Variable: runtime app build ID (looks like this %Y%M%D format) and firefox build ID (same format)
 
@@ -83,4 +84,5 @@ device_reset_default=Nwo tero i makwongo
 
 # Simulator options
 simulator_custom_device=Yiko
+simulator_custom_profile=Propwail makiyubo me Gaia…
 simulator_default_profile=Tii ki makwongo
