--- a/ach/browser/chrome/browser/loop/loop.properties
+++ b/ach/browser/chrome/browser/loop/loop.properties
@@ -172,8 +172,10 @@ video_call_menu_button=Boko lok me video
 
 ## LOCALIZATION NOTE(gravatars_promo_message): The {{learn_more}} part will be
 ## replaced with a link with the text content of gravatars_promo_message_learnmore.
+gravatars_promo_message=I twero medo cal me propwail i yoo me kube mamegi pire kene ki nywako kanonge me email gi ki Gravatar. {{learn_more}}.
 gravatars_promo_message_learnmore=Nong ngec mapol
 gravatars_promo_button_nothanks=Pe,apwoyo
+gravatars_promo_button_use=Tii ki cal me propwail
 
 # Conversation Window Strings
 
