--- a/ach/toolkit/chrome/global/devtools/gclicommands.properties
+++ b/ach/toolkit/chrome/global/devtools/gclicommands.properties
@@ -1422,65 +1422,65 @@ appCacheViewEntryKey=Lagony pa gin ma kiketo me ayara.
 
 # LOCALIZATION NOTE (profilerDesc) A very short string used to describe the
 # function of the profiler command.
-profilerDesc=Lor ngat ma coyo profile
+profilerDesc=Lor la co propwail
 
 # LOCALIZATION NOTE (profilerManual) A longer description describing the
 # set of commands that control the profiler.
-profilerManual=Cik me cako onyo juko laco profile me JavaScript
+profilerManual=Cik me cako onyo juko laco propwail me JavaScript
 
 # LOCALIZATION NOTE (profilerOpen) A very short string used to describe the function
 # of the profiler open command.
-profilerOpenDesc=Yab laco profile
+profilerOpenDesc=Yab laco propwail
 
 # LOCALIZATION NOTE (profilerClose) A very short string used to describe the function
 # of the profiler close command.
-profilerCloseDesc=Lor laco profile
+profilerCloseDesc=Lor laco propwail
 
 # LOCALIZATION NOTE (profilerStart) A very short string used to describe the function
 # of the profiler start command.
-profilerStartDesc=Cak coyo profile
+profilerStartDesc=Cak coyo propwail
 
 # LOCALIZATION NOTE (profilerStartManual) A fuller description of the 'profile name'
 # parameter. This parameter is used to name a newly created profile or to lookup
 # an existing profile by its name.
-profilerStartManual=Nying profile ma imito cako.
+profilerStartManual=Nying propwail ma imito cako.
 
 # LOCALIZATION NOTE (profilerStop) A very short string used to describe the function
 # of the profiler stop command.
-profilerStopDesc=Juk coyo profile
+profilerStopDesc=Juk coyo propwail
 
 # LOCALIZATION NOTE (profilerStopManual) A fuller description of the 'profile name'
 # parameter. This parameter is used to lookup an existing profile by its name.
-profilerStopManual=Nying profile ma imito juko.
+profilerStopManual=Nying propwail ma imito juko.
 
 # LOCALIZATION NOTE (profilerList) A very short string used to describe the function
 # of the profiler list command.
-profilerListDesc=Rye profile weng
+profilerListDesc=Rye propwail weng
 
 # LOCALIZATION NOTE (profilerShow) A very short string used to describe the function
 # of the profiler show command.
-profilerShowDesc=Nyut profile pa dano acelacel
+profilerShowDesc=Nyut propwail pa dano acelacel
 
 # LOCALIZATION NOTE (profilerShowManual) A fuller description of the 'profile name'
 # parameter. This parameter is used to name a newly created profile or to lookup
 # an existing profile by its name.
-profilerShowManual=Nying profile.
+profilerShowManual=Nying propwail.
 
 # LOCALIZATION NOTE (profilerAlreadyStarted) A message that is displayed whenever
 # an operation cannot be completed because the profile in question has already
 # been started.
-profilerAlreadyStarted2=Dong kicako profile woko
+profilerAlreadyStarted2=Dong kicako propwail woko
 
 # LOCALIZATION NOTE (profilerNotFound) A message that is displayed whenever
 # an operation cannot be completed because the profile in question could not be
 # found.
-profilerNotFound=Profile pe ononge
+profilerNotFound=Propwail pe ononge
 
 # LOCALIZATION NOTE (profilerNotStarted) A message that is displayed whenever
 # an operation cannot be completed because the profile in question has not been
 # started yet. It also contains a hint to use the 'profile start' command to
 # start the profiler.
-profilerNotStarted3=Pud pe ya kicako laco profile. Ti ki 'lacak profile' me cako coyo profile
+profilerNotStarted3=Pud pe ya kicako laco propwai. Ti ki 'lacak propwail' me cako coyo propwail
 
 # LOCALIZATION NOTE (profilerStarted2) A very short string that indicates that
 # we have started recording.
@@ -1492,7 +1492,7 @@ profilerStopped=Kijuko woko…
 
 # LOCALIZATION NOTE (profilerNotReady) A message that is displayed whenever
 # an operation cannot be completed because the profiler has not been opened yet.
-profilerNotReady=Wek cik man oti omyero i yab laco profile kong
+profilerNotReady=Wek cik man oti omyero i yab laco propwail kong
 
 # LOCALIZATION NOTE (listenDesc) A very short string used to describe the
 # function of the 'listen' command.
@@ -1551,7 +1551,7 @@ injectFailed=Cano %1$S pe olare - URI mape tye atir
 folderDesc=Yab boc
 folderOpenDesc=Yab yo pa boc
 folderOpenDir=Nying boc
-folderOpenProfileDesc=Yab nying profile
+folderOpenProfileDesc=Yab boc me propwail
 
 # LOCALIZATION NOTE (folderInvalidPath) A string displayed as the result
 # of the 'folder open' command with an invalid folder path.
