[br] update from Pootle (firefox)

--- a/br/browser/chrome/browser/migration/migration.properties
+++ b/br/browser/chrome/browser/migration/migration.properties
@@ -17,6 +17,7 @@ sourceName360se=Merdeer diogel 360
 importedBookmarksFolder=Diouzh %S
 
 importedSafariReadingList=Roll al lennadurioù (diouzh Safari)
+importedEdgeReadingList=Roll al lennadurioù (diouzh Edge)
 
 # Import Sources
 # Note: When adding an import source for profile reset, add the string name to
