--- a/br/browser/chrome/browser/loop/loop.properties
+++ b/br/browser/chrome/browser/loop/loop.properties
@@ -28,6 +28,7 @@ sign_in_again_use_as_guest_button2=Arverañ {{clientSuperShortname}} e-giz ur c'
 first_time_experience_button_label=Kregiñ ganti
 ## LOCALIZATION_NOTE(first_time_experience_subheading): Message inviting the
 ## user to create his or her first conversation.
+first_time_experience_subheading=Mont davet ar gaozeadenn
 
 invite_header_text=Pediñ unan bennak da gontañ kaoz
 invite_header_text2=Pediñ ur mignon da gontañ kaoz
@@ -35,6 +36,9 @@ invite_facebook_button=rannañ war Facebook
 invite_facebook_triggered=rannet !
 invite_contacts_button=rannañ gant an darempredoù
 invite_contacts_triggered=rannet !
+invite_copy_button=eilañ an ere
+invite_copy_triggered=eilet !
+invite_email_button=kas an ere dre bostel
 invite_email_triggered=kaset ar postel !
 
 # Status text
@@ -99,6 +103,8 @@ new_contact_button2=Ouzhpennañ un darempred nevez
 ## LOCALIZATION NOTE (contact_form_*_placeholder):
 ## These are the placeholders for the inputs for entering or editing a contact
 ## Click the 'New Contact' button to see the fields.
+contact_form_name_placeholder=Anv
+contact_form_email_placeholder=Postel
 contact_form_fxos_phone_placeholder=Pellgomzer dre Firefox OS
 contact_form_phone_placeholder2=Pellgomz
 
@@ -107,8 +113,10 @@ contacts_blocked_contacts=Darempredoù harzet
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact. Click the 'New Contact'
 ## button to see the fields.
+add_contact_button=Ouzhpennañ un darempred
 ## LOCALIZATION NOTE(add_contact_title): This is the subtitle of the add contact
 ## panel. It is displayed when Add Contact is selected.
+add_contact_title=Ouzhpennañ un darempred
 ### LOCALIZATION NOTE (valid_email_text_description): This is displayed when
 ### the user enters an invalid email address, preventing the addition of the
 ### contact.
@@ -134,6 +142,7 @@ import_contacts_success_message=Emporzhiet eo bet {{total}} darempred gant berzh
 sync_contacts_button=Goubredañ an darempredoù
 ## LOCALIZATION NOTE(no_contacts_message_heading2): Title shown when user has no
 ## contacts in his address book
+no_contacts_message_heading2=Darempred ebet c'hoazh
 ## LOCALIZATION NOTE(no_contacts_import_or_add2): Subheading inviting the user
 ## to add people to his contact list
 no_contacts_import_or_add2=Ouzhpennañ unan bennak !
@@ -192,6 +201,7 @@ edit_contact_email_label=Postel
 ## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
 ## These button is displayed when the Edit Contact button is selected and is used
 ## to accept the change.
+edit_contact_done_button=Graet
 
 ## LOCALIZATION NOTE(audio_call_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
@@ -205,6 +215,8 @@ video_call_menu_button=Kaozeadenn video
 ## replaced with a link with the text content of gravatars_promo_message_learnmore.
 gravatars_promo_message=Tu 'zo deoc'h ouzhpennañ arlunioù aelad d'ho darempredoù ent emgefreek en ur rannañ o chomlec'hioù postel gant Gravatar. {{learn_more}}.
 gravatars_promo_message_learnmore=Gouzout hiroc'h
+gravatars_promo_button_nothanks2=Ket, trugarez
+gravatars_promo_button_use2=Implijout arlunioù aelad
 
 # Conversation Window Strings
 
@@ -325,6 +337,7 @@ rooms_room_full_label=Daou zen ez eus endeo gant ar gaozeadenn-mañ.
 rooms_room_full_call_to_action_nonFx_label=Pellgargit {{brandShortname}} da gregiñ gant unan deoc'h
 rooms_room_full_call_to_action_label=Gouzout hiroc'h a-zivout {{clientShortname}} »
 rooms_room_joined_label=Unan bennak en deus kemeret perzh er gaozeadenn !
+rooms_room_join_label=Mont davet ar gaozeadenn
 rooms_signout_alert=Serret e vo ar c'haozeadennoù digoret
 
 # Infobar strings
@@ -340,11 +353,13 @@ infobar_menuitem_dontshowagain_accesskey=A
 # LOCALIZATION NOTE (context_inroom_header): this string is displayed in the
 # conversation window when the user edits context. It is a header to the edit
 # section.
+context_inroom_header=Komzomp diwar-benn…
 # LOCALIZATION NOTE (context_inroom_label2): this string is followed by the
 # title and domain of the website you are having a conversation about, displayed on a
 # separate line. If this structure doesn't work for your locale, you might want
 # to consider this as a stand-alone title. See example screenshot:
 # https://bug1115342.bugzilla.mozilla.org/attachment.cgi?id=8563677
+context_inroom_label2=Komzomp diwar-benn :
 ## LOCALIZATION_NOTE (context_edit_activate_label): {{title}} will be replaced
 ## by the title of the active tab, also known as the title of an HTML document.
 ## The quotes around the title are intentional.
@@ -353,6 +368,8 @@ context_edit_name_placeholder=Anv an eskemm
 context_edit_comments_placeholder=Evezhiadennoù
 context_add_some_label=Ouzhpennañ un nebeut kemperzh
 context_show_tooltip=Diskouez ar c'hemperzh
+context_cancel_label=Nullañ
+context_done_label=Graet
 context_link_modified=Kemmet eo bet an ere-mañ.
 context_learn_more_link_label=Gouzout hiroc'h.
 conversation_settings_menu_edit_context=Embann ar c'hemperzh
