--- a/ach/toolkit/chrome/mozapps/profile/profileSelection.properties
+++ b/ach/toolkit/chrome/mozapps/profile/profileSelection.properties
@@ -39,12 +39,12 @@ dontDeleteFiles=Pe I duny Fwail
 
 profileCreationFailed=Yubo propwail pe otwere. Nen calo boc ma kiyeroni pe cone.
 profileCreationFailedTitle=Yubo propwail pe olare
-profileExists=Gin makwako ma tiyo ki ningin dong tye. Tim ber kwany nying mukene.
-profileExistsTitle=Gin makwako Tye
-profileFinishText=Dii otum me yubo gin makwako manyen man.
-profileFinishTextMac=Dii Otum me yubo gin makwako manyeni.
-profileMissing=Cano profile mamegi %S pe olare. Twero bedo pe onyo pe nonge.
-profileMissingTitle=Gin makwako peke
+profileExists=Propwail ma tye ki nying man dong tye. Tim ber i yer nying mukene.
+profileExistsTitle=Propwail dong tye
+profileFinishText=Dii Tyeki me cweyo propwail manyen eni.
+profileFinishTextMac=Dii Otum me cweyo propwail manyen eni.
+profileMissing=Propwail mamegi me %S pe kitwero cano. Twero bedi pe onyo pe nonge.
+profileMissingTitle=Propwail orweny
 
 # Profile reset
 # LOCALIZATION NOTE (resetBackupDirectory): Directory name for the profile directory backup created during reset. This directory is placed in a location users will see it (ie. their desktop). %S is the application name.
