[ach] update from Pootle (firefox-beta)

--- a/ach/browser/chrome/browser/migration/migration.properties
+++ b/ach/browser/chrome/browser/migration/migration.properties
@@ -21,6 +21,7 @@ importedSafariReadingList=Kwano nying (Ki i Safari)
 1_edge=Ter
 1_safari=Ma imaro
 1_chrome=Ma imaro
+1_360se=Jami ayera
 
 2_ie=Cookies
 2_safari=Cookies
@@ -48,13 +49,17 @@ importedSafariReadingList=Kwano nying (Ki i Safari)
 16_firefox=Mung me donyo ma kigwoko
 16_360se=Mung me donyo ma kigwoko
 
+32_ie=Ma imaro loyo
+32_edge=Ma imaro loyo
 32_safari=Alama buk
 32_chrome=Alama buk
 32_360se=Alama buk
 
 64_ie=Tic mukene
+64_edge=Data mukene
 64_safari=Tic mukene
 64_chrome=Tic mukene
 64_firefox_other=Tic mukene
+64_360se=Data mukene
 
 128_firefox=Dirica ki dirica matino
