--- a/ach/toolkit/chrome/mozapps/profile/profileSelection.properties
+++ b/ach/toolkit/chrome/mozapps/profile/profileSelection.properties
@@ -43,8 +43,8 @@ profileExists=Propwail ma tye ki nying man dong tye. Tim ber i yer nying mukene.
 profileExistsTitle=Propwail dong tye
 profileFinishText=Dii Tyeki me cweyo propwail manyen eni.
 profileFinishTextMac=Dii Otum me cweyo propwail manyen eni.
-profileMissing=Propwail mamegi me %S pe kitwero cano. Twero bedi pe onyo pe nonge.
-profileMissingTitle=Propwail orweny
+profileMissing=Propwail mamegi me %S pe kitwero cano. Twero bedi pe tye onyo pe nonge.
+profileMissingTitle=Propwail pe tye
 
 # Profile reset
 # LOCALIZATION NOTE (resetBackupDirectory): Directory name for the profile directory backup created during reset. This directory is placed in a location users will see it (ie. their desktop). %S is the application name.
