[ach] update from Pootle (firefox-beta)

--- a/ach/dom/chrome/dom/dom.properties
+++ b/ach/dom/chrome/dom/dom.properties
@@ -156,6 +156,7 @@ XMLDocumentLoadPrincipalMismatch=Ki gengo tic ki document.load woko ikom gin aco
 # LOCALIZATION NOTE: Do not translate "IndexedDB".
 IndexedDBTransactionAbortNavigation=Kibalo woko kube me IndexedDB ma onongo pud pe otum pi wot me pot buk.
 # LOCALIZATION NOTE: Do not translate Will-change, %1$S,%2$S,%3$S are numbers.
+WillChangeOverBudgetIgnoredWarning=Cam pa ka kan me Will-change tye malo tutwal. Kabedo ne cwalo pixel %1$S, bajet tye karatac me kabedo nya ki %2$S (pixel %3$S). Ki bicayo time pa will-change weng kacce okato bajet woko.
 # LOCALIZATION NOTE: Do not translate "ServiceWorker".
 # LOCALIZATION NOTE: Do no translate "setVelocity", "PannerNode", "AudioListener", "speedOfSound" and "dopplerFactor"
 # LOCALIZATION NOTE: Do not translate "Worker".
