--- a/ach/toolkit/chrome/global/aboutReader.properties
+++ b/ach/toolkit/chrome/global/aboutReader.properties
@@ -30,4 +30,5 @@ aboutReader.toolbar.share=Nywak
 # View menu.
 readerView.enter=Dony i neno me kwan
 readerView.enter.accesskey=R
+readerView.close=Lor Neno me Kwan
 readerView.close.accesskey=R
