--- a/ach/toolkit/chrome/global/devtools/gclicommands.properties
+++ b/ach/toolkit/chrome/global/devtools/gclicommands.properties
@@ -278,6 +278,7 @@ restartBrowserRestarting=Nwoyo cako %1$S…
 
 # LOCALIZATION NOTE (restartBrowserGroupOptions) A label for the optional options of
 # the restart command.
+restartBrowserGroupOptions=Jami ayera
 
 # LOCALIZATION NOTE (restartBrowserSafemodeDesc) A very short string to
 # describe the 'safemode' parameter to the 'restart' command, which is
