--- a/ach/toolkit/chrome/global/devtools/styleinspector.properties
+++ b/ach/toolkit/chrome/global/devtools/styleinspector.properties
@@ -100,6 +100,7 @@ styleinspector.contextmenu.copyImageDataUrl=Lok cal tic me URL
 
 # LOCALIZATION NOTE (styleinspector.contextmenu.toggleOrigSources): Text displayed in the rule view
 # context menu.
+styleinspector.contextmenu.toggleOrigSources=Nyut kama oaa iye ma tye orijinol
 
 # LOCALIZATION NOTE (styleinspector.contextmenu.toggleOrigSources.accessKey): Access key for
 # the rule view context menu "Show original sources" entry.
