--- a/ach/dom/chrome/accessibility/AccessFu.properties
+++ b/ach/dom/chrome/accessibility/AccessFu.properties
@@ -32,6 +32,7 @@ outlineitem    =       rye jami
 pagetab        =       dirica matidi
 propertypage   =       pot buk me jami
 graphic        =       cal
+switch         =       loki
 pushbutton     =       jarara
 checkbutton    =       gwet jarara
 radiobutton    =       jarara ma olunge
@@ -74,6 +75,8 @@ definitionlist =       nying jami me lok kome
 term           =       cik
 definition     =       lok kome
 
+mathmlcell               = bur
+mathmlenclosed           = kirumo
 
 # More sophisticated roles which are not actual numeric roles
 textarea       =       kacoc
@@ -129,6 +132,7 @@ jumpAction     =      opye
 pressAction    =      kidiyo
 checkAction    =      kigweto
 uncheckAction  =      pe kigweto
+onAction       =      tye
 offAction      =      pe tye
 selectAction   =      kiyero
 unselectAction =      pe kiyero
@@ -154,7 +158,9 @@ tabReload      =      nwoyo cano
 
 # Object states
 stateChecked     =    kigweto
+stateOn          =    tye
 stateNotChecked  =    pe kigweto
+stateOff         =    pe tye
 statePressed     =    kidiyo
 # No string for a not pressed toggle button
 stateExpanded    =    kiyaro
@@ -207,6 +213,7 @@ dialogAbbr         =       lok
 separatorAbbr      =       gin mapoko
 toolbarAbbr        =       gintic
 statusbarAbbr      =       lanyut kit ma tye kwede
+tableAbbr          =       meca
 columnheaderAbbr   =       rek malube me wiye
 rowheaderAbbr      =       rek ari me wiye
 columnAbbr         =       rek malube
@@ -278,6 +285,9 @@ stateUncheckedAbbr = ( )
 statePressedAbbr = (x)
 stateUnpressedAbbr = ( )
 
+mathmlenclosedAbbr           = kirumo
+mathmltableAbbr              = meca
+mathmlcellAbbr               = bur
 
 close-fenceAbbr    = lor
 root-indexAbbr     = namba
