--- a/ach/security/manager/chrome/pipnss/nsserrors.properties
+++ b/ach/security/manager/chrome/pipnss/nsserrors.properties
@@ -2,6 +2,8 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+SSL_ERROR_EXPORT_ONLY_SERVER=Pe romo kube ki ber bedo. Wadi pe cwako loko ngec i kod i rwom ma lamal.
+SSL_ERROR_US_ONLY_SERVER=Pe romo kube ki ber bedo. Wadi mito loko ngec i kod i rwom ma lamal ma pe ki cwako.
 SSL_ERROR_NO_CYPHER_OVERLAP=Pe romo kube kwede kompiuta me rwom acel: pe tye coc cura mo marwate.
 SSL_ERROR_NO_CERTIFICATE=Pe romo nongo waraga onyo lagony mamite me twero.
 SSL_ERROR_BAD_CERTIFICATE=Pe romo kube kakare kwede kompiuta ma i rwom marom: kikwero balo me kwan pa kompiuta ma i rwom marom.
@@ -11,6 +13,7 @@ SSL_ERROR_UNSUPPORTED_CERTIFICATE_TYPE=Waraga mape kicwako tere.
 SSL_ERROR_UNSUPPORTED_VERSION=Kompiuta ma i rwom marom tiyo ki cik mape kicwako tere pi cik me gwoko kuc.
 SSL_ERROR_WRONG_CERTIFICATE=Twero pa latic pe olare: lagony pa dano ma i kagwok madit pe orwateki waraga.
 SSL_ERROR_BAD_CERT_DOMAIN=Pe romo kube kakare kwede pia: nying gang ma kikwayo pe rwate ki waraga pa lapok tic.
+SSL_ERROR_POST_WARNING=Kod me bal pa SSL mape kineno.
 SSL_ERROR_SSL2_DISABLED=Pia cwako ka SSL cik 2, ma kigengo woko.
 SSL_ERROR_BAD_MAC_READ=SSL gamo rekod kwede coc twero kwena ma pe atir.
 SSL_ERROR_BAD_MAC_ALERT=SSLpia cwalo nyig coc me twero pa kwena ma pe atir.
@@ -207,16 +210,28 @@ XP_JAVA_CERT_NOT_EXISTS_ERROR=Ladit pe ki waraga
 SEC_ERROR_BAD_EXPORT_ALGORITHM=Namba mamite kikwero woko.
 SEC_ERROR_EXPORTING_CERTIFICATES=Bal itemo me cwalo woko waraga.
 SEC_ERROR_IMPORTING_CERTIFICATES=Bal itemo me kelo waraga ki woko.
+SEC_ERROR_PKCS12_DECODING_PFX=Pe romo kelo ki woko. Bal i loko kod i coc. Pwail pe atir.
 SEC_ERROR_PKCS12_INVALID_MAC=Pe romo kelo. MAC ma pe tiyo. Mung me donyo pe kakare onyo pwail obale.
 SEC_ERROR_PKCS12_UNSUPPORTED_MAC_ALGORITHM=Pe romo kelo. Pe kicwako cik me MAC.
+SEC_ERROR_PKCS12_UNSUPPORTED_TRANSPORT_MODE=Pe romo kelo ki woko. Kit me ada pa mung me donyo ki mung keken aye kicwako.
+SEC_ERROR_PKCS12_CORRUPT_PFX_STRUCTURE=Pe romo kelo ki woko. Gedo me pwail obale woko.
+SEC_ERROR_PKCS12_UNSUPPORTED_PBE_ALGORITHM=Pe romo kelo ki woko. Pe kicwako cik me loko ngec i kod.
 SEC_ERROR_PKCS12_UNSUPPORTED_VERSION=Pe romo kelo. Kit pwail ma pe kicwako.
 SEC_ERROR_PKCS12_PRIVACY_PASSWORD_INCORRECT=Pe romo kelo. Mung me donyo pe kakare.
+SEC_ERROR_PKCS12_CERT_COLLISION=Pe romo kelo ki woko. Nying acelono me pak dong tye i dero.
 SEC_ERROR_USER_CANCELLED=Latic kwede odiyo juki.
 SEC_ERROR_PKCS12_DUPLICATE_DATA=Pe okelo ki woko, bene dong tye ikagwoko tic.
 SEC_ERROR_MESSAGE_SEND_ABORTED=Pe kicwalo kwena.
 SEC_ERROR_INADEQUATE_KEY_USAGE=Tic manok pi waraga me tic ma kitemo.
 SEC_ERROR_INADEQUATE_CERT_TYPE=Pe kimoko kit waraga me cwalo tic.
 SEC_ERROR_CERT_ADDR_MISMATCH=Adress iyi waraga me keto cing pe rwate ki adressma i lawic kwena.
+SEC_ERROR_PKCS12_UNABLE_TO_IMPORT_KEY=Pe romo kelo ki woko. Bal itemo kelo lagony me mung ki woko.
+SEC_ERROR_PKCS12_IMPORTING_CERT_CHAIN=Pe romo kelo ki woko. Bal itemo kelo nyoo me catibiket ki woko.
+SEC_ERROR_PKCS12_UNABLE_TO_LOCATE_OBJECT_BY_NAME=Pe romo cwalo woko. Nongo catibiket onyo lagony ki nying pak pe olare.
+SEC_ERROR_PKCS12_UNABLE_TO_EXPORT_KEY=Pe romo cwalo woko. Pe onongo kiromo nongo ki kelo lagony me mung.
+SEC_ERROR_PKCS12_UNABLE_TO_WRITE=Pe romo cwalo woko. Pe romo cono pwail me acwala woko.
+SEC_ERROR_PKCS12_UNABLE_TO_READ=Pe romo kelo ki woko. Pe romo kwano pwail me akela ki woko.
+SEC_ERROR_PKCS12_KEY_DATABASE_NOT_INITIALIZED=Pe romo cwalo woko. Lagony me dero obale onyo kikwanyo woko.
 SEC_ERROR_KEYGEN_FAIL=Pe romo kelo lagony mukene pa lwak/la dano.
 SEC_ERROR_INVALID_PASSWORD=Mung me donyo ma kiketo ni pe tiyo. Tim ber iyer mukene.
 SEC_ERROR_RETRY_OLD_PASSWORD=Mung me donyo macon ma kiketo ni pe kakare. Tim ber item doki.
@@ -285,6 +300,7 @@ SEC_ERROR_FAILED_TO_ENCODE_DATA=Okwero gonyo tic kwede lagony ASN1
 SEC_ERROR_BAD_INFO_ACCESS_LOCATION=Ngec marac odonyo ikabedo ma i nya me waraga
 SEC_ERROR_LIBPKIX_INTERNAL=Bal ma iye me libpkik otime ikare me mino waraga tic.
 SEC_ERROR_PKCS11_GENERAL_ERROR=PKCS #11 kidwogo CKR_GENERAL_ERROR, nyutu ni bal ma pe obuyupe matwal otime.
+SEC_ERROR_PKCS11_FUNCTION_FAILED=Dul me PKCS #11 odwoko CKR_FUNCTION_FAILED, nyuto ni tic ma kikwayo ni onongo pe ki romo timo. Temo tic acelo doki romo loyo.
 SEC_ERROR_PKCS11_DEVICE_ERROR=PKCS #11 kidwogo CKR_DEVICE_ERROR, nyutu ni peko otime kwede pwoc onyo bur.
 SEC_ERROR_BAD_INFO_ACCESS_METHOD=Kit me donyo ki ngec ma pe ngene i nya me waraga.
 SEC_ERROR_CRL_IMPORT_FAILED=Bal tye ka temo me kelo CRL acel.
