--- a/ach/security/manager/chrome/pippki/pippki.properties
+++ b/ach/security/manager/chrome/pippki/pippki.properties
@@ -65,6 +65,7 @@ pageInfo_Privacy_None3=Pot buk ma itye kaneno ni pe gicono.
 # %2$S is the key size of the cipher.
 # %3$S is protocol version like "SSL 3" or "TLS 1.2"
 pageInfo_EncryptionWithBitsAndProtocol=Kube kimungo woko (%1$S, %2$S bit keys, %3$S)
+pageInfo_BrokenEncryption=Loko ngec i kod ma otur (%1$S, %2$S bit keys, %3$S)
 pageInfo_Privacy_Encrypted1=Pot buk ma itye kaneno gicono woko mapwod gicwalo iwi Intanet.
 pageInfo_Privacy_Encrypted2=Mungo coc miyo bedo tek pi jo mape ki twero me neno ngec mawoto ikin kompiuta. Ka dong man pe romo twere ni ngat mo okwano pot buk man ma tye kawot arir i kube.
 pageInfo_MixedContent=Kicono Kube Maber
