--- a/ach/toolkit/chrome/global/aboutWebrtc.properties
+++ b/ach/toolkit/chrome/global/aboutWebrtc.properties
@@ -71,6 +71,7 @@ selected = Kiyero
 
 save_page_label = Gwok pot buk
 debug_mode_msg_label = Kit me nong bal
+debug_mode_off_state_label = Cak kit me nongo bal
 debug_mode_on_state_label = Juk kit me nongo bal
 connection_closed = kiloro
 fold_show_msg = Nyut kore ki kore
