--- a/ach/toolkit/chrome/global/viewSource.properties
+++ b/ach/toolkit/chrome/global/viewSource.properties
@@ -14,3 +14,4 @@ viewMathMLSourceTitle    = Kama DOM pa MathML nonge iye
 
 context_goToLine_label        = Cit i rek…
 context_wrapLongLines_label   = Um Rek Mabor
+context_highlightSyntax_label = Puyo Syntax
