[ach] update from Pootle (firefox-beta)

--- a/ach/browser/chrome/browser/browser-pocket.properties
+++ b/ach/browser/chrome/browser/browser-pocket.properties
@@ -21,6 +21,7 @@ save = Gwok
 saving = Tye ka gwoko…
 signupemail = Cone ki email
 signuptosave = Cone pi Pocket. Tye me nono.
+suggestedtags = Lanyut ma kimiyo me tam
 tagline = Gwok coc ki video ki i Firefox me neno i Pocket onyo i nyonyo mo keken, cawa mo keken.
 taglinestory_one = Dii jarara me Pocket me gwoko coc, video onyo potbuk mo keken ki i Firefox.
 taglinestory_two = Nen i Pocket ikom nyonyo mo keken, cawa mo keken.
