--- a/ach/browser/chrome/browser/tabbrowser.properties
+++ b/ach/browser/chrome/browser/tabbrowser.properties
@@ -33,5 +33,7 @@ tabs.closeWarningPromptMe=Cika kace ateme me loro dirica matino mapol
 tabs.closeTab.tooltip=Lor tab
 # LOCALIZATION NOTE (tabs.muteAudio.tooltip):
 # %S is the keyboard shortcut for "Mute tab"
+tabs.muteAudio.tooltip=Nek dwon dirica matidi (%S)
 # LOCALIZATION NOTE (tabs.unmuteAudio.tooltip):
 # %S is the keyboard shortcut for "Unmute tab"
+tabs.unmuteAudio.tooltip=Ket dwon dirica matidi (%S)
