--- a/ach/browser/chrome/browser/browser.properties
+++ b/ach/browser/chrome/browser/browser.properties
@@ -34,6 +34,7 @@ xpinstallDisabledButton.accesskey=n
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # Also see https://bugzilla.mozilla.org/show_bug.cgi?id=570012 for mockups
+addonDownloadingAndVerifying=Gamo ki moko ada pa med-ikome…;Gamo ki moko ada pa med-ikome #1…
 addonDownloadVerifying=Tye kamoko
 
 addonInstall.unsigned=(Pe kimoko)
@@ -47,12 +48,15 @@ addonInstall.acceptButton.accesskey=K
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is brandShortName
 # #2 is the number of add-ons being installed
+addonConfirmInstall.message=Kakube man mito keto med-ikome i #1:;Kakube man mito keto med-ikome #2 i #1:
+addonConfirmInstallUnsigned.message=Ciko: Kakube man mito keto med-ikome ma pe ki moko ada ne i #1. Mede ka igeno.;Ciko: Kakube man mito keto med-ikome #2 ma pe ki moko ada gi i #1. Mede ka igeno.
 
 # LOCALIZATION NOTE (addonConfirmInstallSomeUnsigned.message):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is brandShortName
 # #2 is the total number of add-ons being installed (at least 2)
+addonConfirmInstallSomeUnsigned.message=;Ciko: Kakube man mito keto med-ikome #2 ma pe ki moko ada gi i #1. Mogo pe kimoko ada gi. Mede ka igeno.
 
 addonwatch.slow=%1$S aye twero bedo ni tye ka weko %2$S tiyo mot
 addonwatch.disable.label=Juk %S
@@ -79,6 +83,7 @@ addonInstallError-1=Gamo med-ikome pe onongo twere pien kube pe olare.
 addonInstallError-2=Med-ikome man pe onongo twero kete pien pe rwate ki med-ikome %1$S ma kibedo ka kuro.
 addonInstallError-3=Med-ikome ma ki gamo ki i kakube man pe onongo kete pien nen calo obale woko.
 addonInstallError-4=%2$S pe onongo twero kete pien %1$S pe romo yubo pwail ma mite.
+addonInstallError-5=%1$S ogengo kakube man ikom keto med-ikome ma pe kimoko ada ne.
 addonLocalInstallError-1=Med-ikome man pe onongo twero kete pi bal pwail me nyonyo.
 addonLocalInstallError-2=Med-ikome man pe onongo twero kete pien pe rwate ki med-ikome %1$S ma kibedo ka kuro.
 addonLocalInstallError-3=Med-ikome man pe onongo twero kete pien nen calo obale woko.
@@ -92,11 +97,13 @@ addonInstallErrorIncompatible=%3$S pe onongo twero kete pien pe rwate ki %1$S %2
 # LOCALIZATION NOTE (addonInstallErrorBlocklisted): %S is add-on name
 addonInstallErrorBlocklisted=%S pe onongo twero kete pien tye ki teko ma lamal me kelo ayela i cung matek onyo ber bedo.
 
+unsignedAddonsDisabled.message=Med-ikome acel nyo makato ma kiketo pe ki twero moko ada gi kadong kijuko woko.
 unsignedAddonsDisabled.learnMore.label=Nong ngec mapol
 unsignedAddonsDisabled.learnMore.accesskey=N
 
 # LOCALIZATION NOTE (deveditionTheme.name): This should be nearly the brand name for aurora.
 # See browser/branding/aurora/locales/*/brand.properties
+deveditionTheme.name=Pa luyub
 
 # LOCALIZATION NOTE (lwthemeInstallRequest.message): %S will be replaced with
 # the host name of the site.
@@ -408,6 +415,7 @@ safebrowsing.notAForgeryButton.accessKey=a
 safebrowsing.reportedAttackSite=Ripot ma kigoyo ikom kakube me kamony!
 safebrowsing.notAnAttackButton.label=Man pe obedo kakube me kamony…
 safebrowsing.notAnAttackButton.accessKey=m
+safebrowsing.reportedUnwantedSite=Mi ripot ikom kakube pi purugram mape kimito!
 
 # Ctrl-Tab
 # LOCALIZATION NOTE (ctrlTab.listAllTabs.label): #1 represents the number
@@ -635,6 +643,7 @@ getUserMedia.sharingMenu.accesskey = d
 # %S is the website origin (e.g. www.mozilla.org)
 getUserMedia.sharingMenuCamera = %S (camera)
 getUserMedia.sharingMenuMicrophone = %S (microphone)
+getUserMedia.sharingMenuAudioCapture = %S (dwon me dirica matidi)
 getUserMedia.sharingMenuApplication = %S (application)
 getUserMedia.sharingMenuScreen = %S (screen)
 getUserMedia.sharingMenuWindow = %S (window)
@@ -658,6 +667,7 @@ getUserMedia.sharingMenuMicrophoneScreen = %S (microphone and screen)
 getUserMedia.sharingMenuMicrophoneWindow = %S(microphone and window)
 getUserMedia.sharingMenuMicrophoneBrowser = %S (mikropon ki tab)
 getUserMedia.sharingMenuAudioCaptureApplication = %S (dwon me tab ki purugram)
+getUserMedia.sharingMenuAudioCaptureScreen = %S (dwon me dirica matidi ki kio)
 getUserMedia.sharingMenuAudioCaptureWindow = %S (dwon me tab ki dirica)
 getUserMedia.sharingMenuAudioCaptureBrowser = %S (dwon me tab ki tab)
 # LOCALIZATION NOTE(getUserMedia.sharingMenuUnknownHost): this is used for the website
@@ -750,6 +760,7 @@ readingList.promo.firstUse.readerView.body = Kwany anywenanywena me wek i ket cw
 # beta starting from version 41, so it's still useful to have these strings properly localized.
 # %S is brandShortName
 e10s.offerPopup.mainMessage = Tic mapol tye kabino cokcoki bot %S. Itwero cako tic kwede me nongo ber pa tic kwede mogo con.
+e10s.offerPopup.highlight1 = Miyo adwogi i rwom malamal
 e10s.offerPopup.highlight2 = Poto ma nok
 e10s.offerPopup.enableAndRestart.label = Ye kadong i nwo cako
 e10s.offerPopup.enableAndRestart.accesskey = Y
