--- a/ach/browser/chrome/browser/loop/loop.properties
+++ b/ach/browser/chrome/browser/loop/loop.properties
@@ -137,6 +137,7 @@ confirm_delete_contact_alert=I moko ada ni i mito kwanyo namba cim man woko?
 confirm_delete_contact_cancel_button=Juk
 ## LOCALIZATION NOTE(contact_list_title): This is in uppercase in English for
 ## emphasis, please do what is appropriate for specific locales.
+contact_list_title=YOO ME KUBE NA
 
 ## LOCALIZATION NOTE(block_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name, used to block a contact from calling
@@ -194,6 +195,7 @@ unmute_local_audio_button_title=Dwok dwone
 mute_local_video_button_title=Kwany dwone woko
 unmute_local_video_button_title=Dwok dwone
 active_screenshare_button_title=Juk nywako
+share_windows_button_title=Nywak dirica mukene
 
 
 ## LOCALIZATION NOTE (call_with_contact_title): The title displayed
