[ach] update from Pootle (firefox-beta)

--- a/ach/browser/chrome/browser/loop/loop.properties
+++ b/ach/browser/chrome/browser/loop/loop.properties
@@ -9,6 +9,7 @@
 clientShortname2=Firefox Hello
 clientSuperShortname=Nining
 
+contacts_tab_button=Yoo me kube
 
 ## LOCALIZATION_NOTE(sign_in_again_title_line_one, sign_in_again_title_line_two2):
 ## These are displayed together at the top of the panel when a user is needed to
@@ -16,9 +17,12 @@ clientSuperShortname=Nining
 ## and this is displayed in slightly larger font. Please arrange as necessary for
 ## your locale.
 ## {{clientShortname2}} will be replaced by the brand name for either string.
+sign_in_again_title_line_one=Tim ber idony iye odoco
+sign_in_again_title_line_two2=me mede tic ki {{clientShortname2}}
 sign_in_again_button=Dony iyie
 ## LOCALIZATION_NOTE(sign_in_again_use_as_guest_button2): {{clientSuperShortname}}
 ## will be replaced by the super short brandname.
+sign_in_again_use_as_guest_button2=Tii {{clientSuperShortname}} calo Welo
 
 ## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
 ## replaced by the brand name
@@ -50,11 +54,15 @@ problem_accessing_account=Peko obedo tye i nongo akaunt mamegi
 ## the appropriate action.
 retry_button=Tem odoco
 
+share_email_subject6=Ribe kweda pi boko lok me video
 ## LOCALIZATION NOTE (share_email_body6): In this item, don't translate the
 ## part between {{..}} and leave the \n\n part alone
+share_email_body6=Dii kakube me Firefox Hello me kube i boko lok kombedi: {{callUrl}}
 ## LOCALIZATION NOTE (share_email_body_context2): In this item, don't translate
 ## the part between {{..}} and leave the \n\n part alone.
+share_email_body_context2=Ribe kweda pi boko lok me video. Dii kakube me Firefox Hello me kube kombedi: {{callUrl}}\n\nWalok ikom man ikare me boko lok wa: {{title}}
 ## LOCALIZATION NOTE (share_email_footer): Common footer content for both email types
+share_email_footer=\n\n________\nRibe kadong i yub boko lok me video me nono ki Firefox Hello. Kube ma yot i video ki ngat mo keken, ka mo keken. Pe tye gam onyo cone mo. Nong ngec mapol ki i http://www.firefox.com/hello
 ## LOCALIZATION NOTE (share_tweeet): In this item, don't translate the part
 ## between {{..}}. Please keep the text below 117 characters to make sure it fits
 ## in a tweet.
@@ -105,6 +113,7 @@ add_or_import_contact_title=Med onyo kel namba cim kiwoko
 ## contacts into the contact list.
 import_contacts_button3=Kel ki woko
 importing_contacts_progress_button=Kelo ki woko…
+import_contacts_failure_message=Yoo me kube mogo onongo pe kitwero kelo. Tim ber item doki.
 ## LOCALIZATION NOTE(import_contacts_success_message): Success notification message
 ## when user's contacts have been successfully imported.
 ## Semicolon-separated list of plural forms. See:
@@ -134,6 +143,7 @@ remove_contact_menu_button2=Kwany namba cim…
 confirm_delete_contact_alert=I moko ada ni i mito kwanyo namba cim man woko?
 ## LOCALIZATION NOTE(confirm_delete_contact_remove_button, confirm_delete_contact_cancel_button):
 ## These are displayed on the alert with confirm_delete_contact_alert
+confirm_delete_contact_remove_button=Kwany yoo me kube
 confirm_delete_contact_cancel_button=Juk
 ## LOCALIZATION NOTE(contact_list_title): This is in uppercase in English for
 ## emphasis, please do what is appropriate for specific locales.
@@ -195,7 +205,9 @@ unmute_local_audio_button_title=Dwok dwone
 mute_local_video_button_title=Kwany dwone woko
 unmute_local_video_button_title=Dwok dwone
 active_screenshare_button_title=Juk nywako
+share_tabs_button_title2=Nywak dirica matino ni
 share_windows_button_title=Nywak dirica mukene
+self_view_hidden_message=Nen-kenken okane ento put kitye ka cwalo; lok dit pa dirica me nyuto
 
 
 ## LOCALIZATION NOTE (call_with_contact_title): The title displayed
@@ -248,6 +260,7 @@ cancel_button=Juk
 cannot_start_call_session_not_ready=Pe twero cako cim, lwongo pud pe oyubbe.
 network_disconnected=Kube ongole woko atura.
 connection_error_see_console_notification=Cim pe olare; nen kacoc pi matut.
+no_media_failure_message=Pe kinongo lamak cal onyo mikropon mo.
 
 ## LOCALIZATION NOTE (legal_text_and_links3): In this item, don't translate the
 ## parts between {{..}} because these will be replaced with links with the labels
@@ -311,9 +324,13 @@ infobar_button_gotit_label=Aniang dong!
 # separate line. If this structure doesn't work for your locale, you might want
 # to consider this as a stand-alone title. See example screenshot:
 # https://bug1115342.bugzilla.mozilla.org/attachment.cgi?id=8563677
+context_inroom_label=Walok ikom:
 ## LOCALIZATION_NOTE (context_edit_activate_label): {{title}} will be replaced
 ## by the title of the active tab, also known as the title of an HTML document.
 ## The quotes around the title are intentional.
+context_edit_activate_label=Lok ikom "{{title}}"
+context_edit_name_placeholder=Nying boko lok
+context_edit_comments_placeholder=Lok
 context_save_label2=Gwok
 context_learn_more_link_label=Nong ngec mapol.
 
