--- a/ach/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/ach/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -80,6 +80,8 @@ feed-button.tooltiptext2 = Cone i pot buk man
 # LOCALIZATION NOTE (characterencoding-button2.label): The \u00ad text at the beginning
 # of the string is used to disable auto hyphenation on the button text when it is displayed
 # in the menu panel.
+characterencoding-button2.label = Loko coc i kod
+characterencoding-button2.tooltiptext = Nyut jami ayera me loko coc i kod
 
 email-link-button.label = Kakube me email
 email-link-button.tooltiptext3 = Cwal email me kakube bot pot buk man
@@ -119,3 +121,4 @@ devtools-webide-button2.tooltiptext = Yab WebIDE (%S)
 pocket-button.label = Pocket
 pocket-button.tooltiptext = Gwok i Pocket
 
+e10s-button.label = Dirica manyen me Non-e10s
