[az] update from Pootle (firefox-beta)

--- a/az/security/manager/chrome/pipnss/nsserrors.properties
+++ b/az/security/manager/chrome/pipnss/nsserrors.properties
@@ -196,6 +196,7 @@ XP_JAVA_CERT_NOT_EXISTS_ERROR=Bu baş bölməsinin təsdiq sənədi yoxdur
 SEC_ERROR_BAD_EXPORT_ALGORITHM=İstenen açma yoluna icazə verilmir.
 SEC_ERROR_EXPORTING_CERTIFICATES=Təsdiq sənədləri ixrac edilərkən səhv baş verdi.
 SEC_ERROR_IMPORTING_CERTIFICATES=təsdiq sənədləri idxal edilərkən səhv baş verdi.
+SEC_ERROR_PKCS12_INVALID_MAC=İdxal edile bilmir. Xətalı MAC. Səhv parol və ya zədələnmiş fayl.
 SEC_ERROR_USER_CANCELLED=İstifadəçi ləğv et düyməsinə basdı.
 SEC_ERROR_PKCS12_DUPLICATE_DATA=İdxal edilmədi: Bazada mövcuddur.
 SEC_ERROR_MESSAGE_SEND_ABORTED=İleti gönderilmedi.
