[son] update from Pootle (firefox-beta)

--- a/son/browser/chrome/browser/browser.properties
+++ b/son/browser/chrome/browser/browser.properties
@@ -331,9 +331,15 @@ identity.identified.state_and_country=%S, %S
 
 identity.unknown.tooltip=Interneti nungoo woo ši boŋtammaasa alhabar noo.
 
+trackingProtection.intro.title=Takaa woo nda ganayan jejebu ga goy
 # LOCALIZATION NOTE (trackingProtection.intro.description): %S is brandShortName
+trackingProtection.intro.description=Waati kaŋ boro ga dii jejebu, woo ti Firefox ga soobay ka gundekuna kaŋ ga war gana gagay.
 # LOCALIZATION NOTE (trackingProtection.intro.step1of3): Indicates that the intro panel is step one of three in a tour.
+trackingProtection.intro.step1of3=1 kaŋ hun 3 ra
+trackingProtection.intro.nextButton.label=Bisa
 
+trackingProtection.icon.activeTooltip=Na ganayan šiiyan gagay
+trackingProtection.icon.disabledTooltip=Na ganayan gundekuna maate
 
 # Edit Bookmark UI
 editBookmarkPanel.pageBookmarkedTitle=Moo šilbante
@@ -552,7 +558,10 @@ getUserMedia.shareCamera.message = War ga boona ka war biizaahayaa žemna nda %S
 getUserMedia.shareMicrophone.message = War ga boona ka war jindezaahayaa žemna nda %S?
 getUserMedia.shareScreen.message = War ga boona ka war biizaahayaa žemna nda %S?
 getUserMedia.shareCameraAndMicrophone.message = War ga boona ka war bii- nda jindezaahayey žemna nda %S?
+getUserMedia.shareCameraAndAudioCapture.message = War ga boona ka war bii-zaahayaa nda kanjoo woo jindoo žemna nda %S?
 getUserMedia.shareScreenAndMicrophone.message = War ga boona ka war jindezaahayaa žemna nda %S?
+getUserMedia.shareScreenAndAudioCapture.message = War ga boona ka kanjoo woo jindoo nda war dijoo žemna nda %S?
+getUserMedia.shareAudioCapture.message = War ga boona ka kanjoo woo jindoo žemna nda %S?
 getUserMedia.selectWindow.label=Zanfun ka žemna:
 getUserMedia.selectWindow.accesskey=Z
 getUserMedia.selectScreen.label=Diji ka žemna:
@@ -594,6 +603,7 @@ getUserMedia.sharingApplication.message = War goo ma porogaram-ize foo žemni nd
 getUserMedia.sharingScreen.message = War goo ma war dijoo žemni nda moɲoo woo.
 getUserMedia.sharingWindow.message = War goo ma war diji foo žemni nda moɲoo woo.
 getUserMedia.sharingBrowser.message = War goo ma war nor loku foo žemni nda moɲoo woo.
+getUserMedia.sharingAudioCapture.message = War goo ma kanje foo jindoo žemni nda moɲoo woo.
 getUserMedia.continueSharing.label = Gaabu ka žemna
 getUserMedia.continueSharing.accesskey = G
 getUserMedia.stopSharing.label = Fenda žemnayan
@@ -633,6 +643,7 @@ getUserMedia.sharingMenu.accesskey = j
 # %S is the website origin (e.g. www.mozilla.org)
 getUserMedia.sharingMenuCamera = %S (biizaahaya)
 getUserMedia.sharingMenuMicrophone = %S (mikro)
+getUserMedia.sharingMenuAudioCapture = %S (kanje jinde)
 getUserMedia.sharingMenuApplication = %S (porogaram)
 getUserMedia.sharingMenuScreen = %S (diji)
 getUserMedia.sharingMenuWindow = %S (zanfun)
@@ -642,6 +653,10 @@ getUserMedia.sharingMenuCameraMicrophoneApplication = %S biizaahaya,mikro nda po
 getUserMedia.sharingMenuCameraMicrophoneScreen = %S biizaahaya, mikro nda diji)
 getUserMedia.sharingMenuCameraMicrophoneWindow = %S (biizaahaya, mikro nda zanfun)
 getUserMedia.sharingMenuCameraMicrophoneBrowser = %S (biizaahaya, mikro nda nor loku)
+getUserMedia.sharingMenuCameraAudioCapture = %S (biizaahaya nda kanje)
+getUserMedia.sharingMenuCameraAudioCaptureApplication = %S (biizaahaya, kanje jinde nda porogaram)
+getUserMedia.sharingMenuCameraAudioCaptureScreen = %S (biizaahaya, kanje jinde nda diji)
+getUserMedia.sharingMenuCameraAudioCaptureWindow = %S (biizaahaya, kanje jinde nda zanfun)
 getUserMedia.sharingMenuCameraApplication = %S (biizaahaya nda porogaram)
 getUserMedia.sharingMenuCameraScreen = %S (biizaahaya nda diji)
 getUserMedia.sharingMenuCameraWindow = %S (biizaahaya nda zanfun)
