[son] update from Pootle (firefox-beta)

--- a/son/browser/chrome/browser/browser.properties
+++ b/son/browser/chrome/browser/browser.properties
@@ -657,6 +657,7 @@ getUserMedia.sharingMenuCameraAudioCapture = %S (biizaahaya nda kanje)
 getUserMedia.sharingMenuCameraAudioCaptureApplication = %S (biizaahaya, kanje jinde nda porogaram)
 getUserMedia.sharingMenuCameraAudioCaptureScreen = %S (biizaahaya, kanje jinde nda diji)
 getUserMedia.sharingMenuCameraAudioCaptureWindow = %S (biizaahaya, kanje jinde nda zanfun)
+getUserMedia.sharingMenuCameraAudioCaptureBrowser = %S (biizaahaya, jinde jinde nda kanje)
 getUserMedia.sharingMenuCameraApplication = %S (biizaahaya nda porogaram)
 getUserMedia.sharingMenuCameraScreen = %S (biizaahaya nda diji)
 getUserMedia.sharingMenuCameraWindow = %S (biizaahaya nda zanfun)
@@ -665,6 +666,10 @@ getUserMedia.sharingMenuMicrophoneApplication = %S (mikro nda porogaram)
 getUserMedia.sharingMenuMicrophoneScreen = %S (mikro nda diji)
 getUserMedia.sharingMenuMicrophoneWindow = %S (mikro nda zanfun)
 getUserMedia.sharingMenuMicrophoneBrowser = %S (mikro nda nor loku)
+getUserMedia.sharingMenuAudioCaptureApplication = %S (kanje jinde nda porogaram)
+getUserMedia.sharingMenuAudioCaptureScreen = %S (kanje jinde nda diji)
+getUserMedia.sharingMenuAudioCaptureWindow = %S (kanje jinde nda zanfun)
+getUserMedia.sharingMenuAudioCaptureBrowser = %S (kanje jinde nda kanje)
 # LOCALIZATION NOTE(getUserMedia.sharingMenuUnknownHost): this is used for the website
 # origin for the sharing menu if no readable origin could be deduced from the URL.
 getUserMedia.sharingMenuUnknownHost = Aššil šibayante
