--- a/son/browser/chrome/browser/loop/loop.properties
+++ b/son/browser/chrome/browser/loop/loop.properties
@@ -18,8 +18,12 @@ contacts_tab_button=Borey
 ## and this is displayed in slightly larger font. Please arrange as necessary for
 ## your locale.
 ## {{clientShortname2}} will be replaced by the brand name for either string.
+sign_in_again_title_line_one=Taare huru taaga
+sign_in_again_title_line_two2=ka gaabandi ka goy nda {{clientShortname2}}
+sign_in_again_button=Huru
 ## LOCALIZATION_NOTE(sign_in_again_use_as_guest_button2): {{clientSuperShortname}}
 ## will be replaced by the super short brandname.
+sign_in_again_use_as_guest_button2=Goy nda {{clientSuperShortname}} sanda yaw
 
 ## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
 ## replaced by the brand name
@@ -51,15 +55,22 @@ problem_accessing_account=Šenday foo bangay war kontu huruyanoo waate
 ## the appropriate action.
 retry_button=Šii taaga
 
+share_email_subject6=Ay gar widewo faakaaray se
 ## LOCALIZATION NOTE (share_email_body6): In this item, don't translate the
 ## part between {{..}} and leave the \n\n part alone
+share_email_body6=Firefox Hello doboo naagu ka huru faakaaraa ra sohõda: {{callUrl}}
 ## LOCALIZATION NOTE (share_email_body_context2): In this item, don't translate
 ## the part between {{..}} and leave the \n\n part alone.
+share_email_body_context2=Ay gar widewo faakaaray se. Firefox Hello doboo naagu ka ciya sohõda: {{callUrl}}\n\nIr ma šelaŋ woo ga ir faakaaraa waate: {{title}}
 ## LOCALIZATION NOTE (share_email_footer): Common footer content for both email types
+share_email_footer=\n\n________\nAy gar ka nda faakaaray widewo Firefox Hello ra forba. Boro kul cee nda widewo, nungu kul ra. Zumandiyan wala maahantumyan kul ši a ra. Bay ka tonton http://www.firefox.com/hello ga
 ## LOCALIZATION NOTE (share_tweeet): In this item, don't translate the part
 ## between {{..}}. Please keep the text below 117 characters to make sure it fits
 ## in a tweet.
+share_tweet=Ay gar widewo faakaaray {{clientShortname2}} ga!
 
+share_button3=Doboo žemna
+share_add_service_button=Goymee foo tonton
 copy_url_button2=Doboo berandi
 copied_url_button=Berante!
 
@@ -68,6 +79,7 @@ panel_footer_signin_or_signup_link=Huru wala maa hantum
 settings_menu_item_account=Kontu
 settings_menu_item_settings=Kayandiyaney
 settings_menu_item_signout=Fatta
+settings_menu_item_signin=Huru
 settings_menu_button_tooltip=Kayandiyaney
 
 # Contact Strings (Panel)
@@ -101,6 +113,7 @@ valid_email_text_description=Bataga aderesu henna foo dam ne
 ## LOCALIZATION NOTE (add_or_import_contact_title): This is the subtitle of the
 ## panel.
 add_or_import_contact_title=Boro dam wal'a bere
+import_contacts_button2=Zaa Google ga
 ## LOCALIZATION NOTE (import_contacts_button3): Text for button used to import
 ## contacts into the contact list.
 import_contacts_button3=Bere
@@ -117,8 +130,10 @@ import_contacts_success_message=Boro {{total}} zaandi ka timme;Boro {{total}} za
 sync_contacts_button=Borey hangandi
 ## LOCALIZATION NOTE(no_contacts_message_heading): Title shown when user has no
 ## contacts in his address book
+no_contacts_message_heading=Boro kul šii jina
 ## LOCALIZATION NOTE(no_contacts_import_or_add): Subheading inviting the user
 ## to add people to his contact list
+no_contacts_import_or_add=Boro zaa wal'a tonton
 
 ## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
 ## contacts fails. This is displayed in the error field.
@@ -128,16 +143,20 @@ import_failed_support_button=Faaba
 
 ## LOCALIZATION NOTE(remove_contact_menu_button2): Displayed in the contact list in
 ## a pop-up menu next to the contact's name.
+remove_contact_menu_button2=Boraa kaa…
 ## LOCALIZATION NOTE(remove_contact_title): Displayed in the contact list in
 ## a pop-up menu next to the contact's name.
+remove_contact_menu_button3=Boraa kaa
 ## LOCALIZATION NOTE(confirm_delete_contact_alert): This is an alert that is displayed
 ## to confirm deletion of a contact.
 confirm_delete_contact_alert=Alhakiika war ga baa ka boraa woo kaa?
 ## LOCALIZATION NOTE(confirm_delete_contact_remove_button, confirm_delete_contact_cancel_button):
 ## These are displayed on the alert with confirm_delete_contact_alert
+confirm_delete_contact_remove_button=Boraa kaa
 confirm_delete_contact_cancel_button=Naŋ
 ## LOCALIZATION NOTE(contact_list_title): This is in uppercase in English for
 ## emphasis, please do what is appropriate for specific locales.
+contact_list_title=AY BOREY
 
 ## LOCALIZATION NOTE(block_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name, used to block a contact from calling
@@ -196,7 +215,9 @@ mute_local_video_button_title=War widewo jindoo wii
 unmute_local_video_button_title=Wra widewo jindoo willi
 active_screenshare_button_title=Fenda žemnayan
 inactive_screenshare_button_title=War dijoo žemna
+share_tabs_button_title2=War kanjey žemna
 share_windows_button_title=Zanfun taney žemna
+self_view_hidden_message=Boŋ-gunayan ga tugu amm'a goo ma sanbandi; zanfunoo sasawandi ka dii y'a
 
 
 ## LOCALIZATION NOTE (call_with_contact_title): The title displayed
@@ -243,11 +264,13 @@ call_timeout_notification_text=War ciyaroo mana bisa.
 ## LOCALIZATION NOTE (retry_call_button, cancel_button, email_link_button):
 ## These buttons are displayed when a call has failed.
 retry_call_button=Ciya taaga
+email_link_button=Bataga dobu
 cancel_button=Naŋ
 
 cannot_start_call_session_not_ready=Ši hin ka šintin ka ciya za batoo mana soolu.
 network_disconnected=Sankay ciyaroo tun de a dunbu.
 connection_error_see_console_notification=Ciyaroo dunbu; šilbayhayey guna diji-walhaa ga.
+no_media_failure_message=Mana duu biizaahaya wala mikro kul.
 
 ## LOCALIZATION NOTE (legal_text_and_links3): In this item, don't translate the
 ## parts between {{..}} because these will be replaced with links with the labels
@@ -270,6 +293,7 @@ feedback_rejoin_button=Willi
 ## an abusive user.
 feedback_report_user_button=Goykaw bayrandiyan
 feedback_window_heading=Taka foo nda war faakaaraa?
+feedback_request_button=War laasaaboo hantum
 
 help_label=Faaba
 tour_label=Windi
@@ -288,6 +312,7 @@ rooms_list_current_conversations=Sohõda faakaaray;Sohõda faakaarawey
 rooms_list_delete_tooltip=Faakaaraa tuusu
 rooms_list_deleteConfirmation_label=War g''alhakiika?
 rooms_list_no_current_conversations=Faakaaray kul ši sohõda
+rooms_change_failed_label=Faakaaraa ši hin ka taagandi
 rooms_new_room_button_label=Faakaaray šintin
 rooms_only_occupant_label=War ti boro jinaa ne.
 rooms_panel_title=Faakaaray foo suuba wal'itaaga foo šintin
@@ -313,10 +338,21 @@ infobar_menuitem_dontshowagain_accesskey=D
 # separate line. If this structure doesn't work for your locale, you might want
 # to consider this as a stand-alone title. See example screenshot:
 # https://bug1115342.bugzilla.mozilla.org/attachment.cgi?id=8563677
+context_inroom_label=Ir ma nga šennoo tee:
 ## LOCALIZATION_NOTE (context_edit_activate_label): {{title}} will be replaced
 ## by the title of the active tab, also known as the title of an HTML document.
 ## The quotes around the title are intentional.
+context_edit_activate_label=Šelaŋ "{{title}}" ga
+context_edit_name_placeholder=Faakaaraa maaɲoo
+context_edit_comments_placeholder=Daarawey
+context_add_some_label=Fahami kayna tonton
+context_edit_tooltip=Boro maa fasal
+context_hide_tooltip=Fahami doo tugu
+context_show_tooltip=Fahami doo cebe
 context_save_label2=Gaabu
+context_link_modified=Doboo woo n' ka barmay.
+context_learn_more_link_label=Bay ka tonton.
 
 # Text chat strings
 
+chat_textbox_placeholder=Hantum ne…
