--- a/son/browser/chrome/browser/tabbrowser.properties
+++ b/son/browser/chrome/browser/tabbrowser.properties
@@ -33,5 +33,7 @@ tabs.closeWarningPromptMe=Ay yaamar nd'ay ga baa ka nor loku booboyaŋ daabu
 tabs.closeTab.tooltip=Nor lokoo daabu
 # LOCALIZATION NOTE (tabs.muteAudio.tooltip):
 # %S is the keyboard shortcut for "Mute tab"
+tabs.muteAudio.tooltip=Kanje jinde wii (%S)
 # LOCALIZATION NOTE (tabs.unmuteAudio.tooltip):
 # %S is the keyboard shortcut for "Unmute tab"
+tabs.unmuteAudio.tooltip=Kanje jinde feeri (%S)
