--- a/son/toolkit/chrome/global/aboutServiceWorkers.properties
+++ b/son/toolkit/chrome/global/aboutServiceWorkers.properties
@@ -2,20 +2,29 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+title = Aššil: %S
 
 # LOCALIZATION NOTE: %1$S is brandShortName, %2$2 is the application ID, and $%$3 is true/false value.
 # LOCALIZATION NOTE: the term "InBrowserElement" should not be translated
+b2gtitle = %1$S ga porogaram %2$S šilbay - InBrowserElement %3$S
 
+scope = Gande:
 
+scriptSpec = Šigira šilbay:
 
 # LOCALIZATION NOTE: the term "Worker" should not be translated.
+currentWorkerURL = Sohõda Worker URL:
 
+activeCacheName = Tugudoo maa dirante:
 
+waitingCacheName = Batuyan tugudoo maa:
 
+true = true
 
 false = taari
 
 # LOCALIZATION NOTE this term is used as a button label (verb, not noun).
+update = Taagandi
 
 
 
