--- a/son/toolkit/chrome/global/aboutServiceWorkers.properties
+++ b/son/toolkit/chrome/global/aboutServiceWorkers.properties
@@ -26,7 +26,11 @@ false = taari
 # LOCALIZATION NOTE this term is used as a button label (verb, not noun).
 update = Taagandi
 
+unregister = Maa kaa
 
+waiting = Goo ma batu:
 
 # LOCALIZATION NOTE: the term "Service Worker" should not translated.
+unregisterError = Mana hin ka Service Worker woo maa kaa.
 
+pushEndpoint = Sanbaroo kaydogoo:
