--- a/son/browser/chrome/browser/preferences/preferences.properties
+++ b/son/browser/chrome/browser/preferences/preferences.properties
@@ -148,3 +148,4 @@ shouldRestartTitle=%S tunandi taaga
 #### e10S
 # LOCALIZATION NOTE (e10sFeedbackAfterRestart): This message appears when the user
 # unchecks "Enable multi-process" on the "General" preferences tab.
+e10sFeedbackAfterRestart=Tunandi taaga banda ga, nor loku ga feera input.mozilla.org ga kaŋ ra war ga war e10s goyyan bayraa filla ir se.
