[az] update from Pootle (thunderbird)

--- a/az/mail/chrome/messenger/messenger.properties
+++ b/az/mail/chrome/messenger/messenger.properties
@@ -382,6 +382,8 @@ mailnews.search_date_separator=
 # LOCALIZATION NOTE (downloadAndInstallButton.label): %S is replaced by the
 # version of the update: "Update to 28.0".
 
+outdatedpluginsMessage.updateButton.label=Qoşmaları Yenilə…
+outdatedpluginsMessage.updateButton.accesskey=Y
 
 # Sanitize
 # LOCALIZATION NOTE (sanitizeDialog2.everything.title): When "Time range to
