[az] update from Pootle (firefox-beta)

--- a/az/dom/chrome/plugins.properties
+++ b/az/dom/chrome/plugins.properties
@@ -6,10 +6,10 @@
 #    Those strings are inserted into an HTML page, so all HTML characters
 #    have to be escaped in a way that they show up correctly in HTML!
 
-title_label=Əlavə proqramlar haqqında
-installedplugins_label=Yazılmış əlavələr
-nopluginsareinstalled_label=Heç bir yazılmış əlavə tapılmadı
-findpluginupdates_label=Quraşdırılmış əlavə proqramların yeniləmələrinə burdan baxın:
+title_label=Qoşmalar Haqqında
+installedplugins_label=Qurulmuş qoşmalar
+nopluginsareinstalled_label=Heç bir qurulmuş qoşma tapılmadı
+findpluginupdates_label=Quraşdırılmış qoşmalar üçün yeniləmələrə buradan baxın:
 file_label=Fayl:
 path_label=Qısayol:
 version_label=Sürüm:
