--- a/az/toolkit/chrome/mozapps/extensions/extensions.properties
+++ b/az/toolkit/chrome/mozapps/extensions/extensions.properties
@@ -178,7 +178,7 @@ eulaHeader=%S quraşdırmaya davam etməmişdən qabaq aşağıdakı son istifad
 type.extension.name=Əlavələr
 type.theme.name=Görünüş
 type.locale.name=Dillər
-type.plugin.name=Əlavə proqramlar
+type.plugin.name=Qoşmalar
 type.dictionary.name=Lüğətlər
 type.service.name=Servislər
 type.experiment.name=Eksperimentlər
