--- a/ach/browser/chrome/browser/loop/loop.properties
+++ b/ach/browser/chrome/browser/loop/loop.properties
@@ -138,6 +138,7 @@ import_failed_support_button=Kony
 remove_contact_menu_button2=Kwany namba cim…
 ## LOCALIZATION NOTE(remove_contact_title): Displayed in the contact list in
 ## a pop-up menu next to the contact's name.
+remove_contact_menu_button3=Kwany yoo me kube
 ## LOCALIZATION NOTE(confirm_delete_contact_alert): This is an alert that is displayed
 ## to confirm deletion of a contact.
 confirm_delete_contact_alert=I moko ada ni i mito kwanyo namba cim man woko?
