--- a/ach/browser/chrome/browser/migration/migration.properties
+++ b/ach/browser/chrome/browser/migration/migration.properties
@@ -24,9 +24,11 @@ importedSafariReadingList=Kwano nying (Ki i Safari)
 1_360se=Jami ayera
 
 2_ie=Cookies
+2_edge=Angija
 2_safari=Cookies
 2_chrome=Cookies
 2_firefox=Cookies
+2_360se=Angija
 
 4_ie=Gin mukato me yeny
 4_edge=Gin mukato me yeny
