[ach] update from Pootle (firefox-beta)

--- a/ach/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/ach/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -122,3 +122,4 @@ pocket-button.label = Pocket
 pocket-button.tooltiptext = Gwok i Pocket
 
 e10s-button.label = Dirica manyen me Non-e10s
+e10s-button.tooltiptext = Yab dirica manyen me Non-e10s
