--- a/ach/browser/chrome/browser/loop/loop.properties
+++ b/ach/browser/chrome/browser/loop/loop.properties
@@ -9,6 +9,7 @@
 clientShortname2=Firefox Hello
 clientSuperShortname=Nining
 
+rooms_tab_button=Boko lok
 contacts_tab_button=Yoo me kube
 
 ## LOCALIZATION_NOTE(sign_in_again_title_line_one, sign_in_again_title_line_two2):
@@ -66,7 +67,10 @@ share_email_footer=\n\n________\nRibe kadong i yub boko lok me video me nono ki 
 ## LOCALIZATION NOTE (share_tweeet): In this item, don't translate the part
 ## between {{..}}. Please keep the text below 117 characters to make sure it fits
 ## in a tweet.
+share_tweet=Ribe kweda pi boko lok me video i {{clientShortname2}}!
 
+share_button3=Nywak kakube
+share_add_service_button=Med tic
 copy_url_button2=Lok kakube
 copied_url_button=Ki loko!
 
@@ -109,6 +113,7 @@ valid_email_text_description=Tim ber i ket email address ma atir
 ## LOCALIZATION NOTE (add_or_import_contact_title): This is the subtitle of the
 ## panel.
 add_or_import_contact_title=Med onyo kel namba cim kiwoko
+import_contacts_button2=Kel ki woko ki i Google
 ## LOCALIZATION NOTE (import_contacts_button3): Text for button used to import
 ## contacts into the contact list.
 import_contacts_button3=Kel ki woko
@@ -119,13 +124,16 @@ import_contacts_failure_message=Yoo me kube mogo onongo pe kitwero kelo. Tim ber
 ## Semicolon-separated list of plural forms. See:
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## In this item, don't translate the part between {{..}}
+import_contacts_success_message=yoo me kube {{total}} okele maber kiwoko.;yoo me kube {{total}} okele maber kiwoko.
 ## LOCALIZATION NOTE(sync_contacts_button): This button is displayed in place of
 ## importing_contacts_button once contacts have been imported once.
 sync_contacts_button=Rib Namba cim
 ## LOCALIZATION NOTE(no_contacts_message_heading): Title shown when user has no
 ## contacts in his address book
+no_contacts_message_heading=Yoo me kube pe ya tye
 ## LOCALIZATION NOTE(no_contacts_import_or_add): Subheading inviting the user
 ## to add people to his contact list
+no_contacts_import_or_add=Kel kiwoko onyo med ngati mo
 
 ## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
 ## contacts fails. This is displayed in the error field.
@@ -206,6 +214,7 @@ unmute_local_audio_button_title=Dwok dwone
 mute_local_video_button_title=Kwany dwone woko
 unmute_local_video_button_title=Dwok dwone
 active_screenshare_button_title=Juk nywako
+inactive_screenshare_button_title=Nywak ki ni
 share_tabs_button_title2=Nywak dirica matino ni
 share_windows_button_title=Nywak dirica mukene
 self_view_hidden_message=Nen-kenken okane ento put kitye ka cwalo; lok dit pa dirica me nyuto
@@ -316,7 +325,11 @@ rooms_signout_alert=Ki biloro woko boko lok matye ayaba
 
 # Infobar strings
 
+infobar_screenshare_browser_message=Jo ma tye i boko lok mamegi dong bi bedo ki kero me neno jami me dirica matidi mo ma i diyo.
 infobar_button_gotit_label=Aniang dong!
+infobar_button_gotit_accesskey=G
+infobar_menuitem_dontshowagain_label=Pe i nyut eni doki
+infobar_menuitem_dontshowagain_accesskey=D
 
 # Context in conversation strings
 
@@ -333,7 +346,9 @@ context_edit_activate_label=Lok ikom "{{title}}"
 context_edit_name_placeholder=Nying boko lok
 context_edit_comments_placeholder=Lok
 context_save_label2=Gwok
+context_link_modified=Ki yiko kakube man.
 context_learn_more_link_label=Nong ngec mapol.
 
 # Text chat strings
 
+chat_textbox_placeholder=Co kany…
