[son] update from Pootle (firefox-beta)

--- a/son/browser/chrome/browser/devtools/filterwidget.properties
+++ b/son/browser/chrome/browser/devtools/filterwidget.properties
@@ -13,6 +13,7 @@ emptyFilterList=Gaŋa kul mana tabatandi
 
 # LOCALIZATION NOTE (emptyPresetList):
 # This string is displayed when preset's list is empty
+emptyPresetList=Wara šii nda jine-suubari gaabunte kul. War ga hin ka fayari jine-suubarey jiši nda war maa foo suuba k'i gaabu. Jine-suubarey ga cahã ka duwandi nda war ga hin k'i ha goy koyne nda faala.
 
 # LOCALIZATION NOTE (addUsingList):
 # This string is displayed under [emptyFilterList] when filter's
