--- a/son/browser/chrome/browser/devtools/markers.properties
+++ b/son/browser/chrome/browser/devtools/markers.properties
@@ -23,12 +23,21 @@ marker.label.parseXML=XML fesu-fesu
 marker.label.domevent=DOM batu
 marker.label.consoleTime=Diji-walha:
 marker.label.garbageCollection=Tonton cindi-kurmakaw
+marker.label.garbageCollection.nonIncremental=Tonton cindi-kurmakaw
+marker.label.cycleCollection=Kuubiri kuunari
+marker.label.cycleCollection.forgetSkippable=CC bii žebuyan
 marker.label.timestamp=Waati tammaasa
 marker.label.unknown=Šibayante
 
 # LOCALIZATION NOTE (marker.label.javascript.*):
 # These strings are displayed as JavaScript markers that have special
 # reasons that can be translated.
+marker.label.javascript.scriptElement=Šigira dumi kanji
+marker.label.javascript.promiseCallback=Allaahidu williciyari
+marker.label.javascript.promiseInit=Allaahidu ciyari-šilbay
+marker.label.javascript.workerRunnable=Goykaw
+marker.label.javascript.jsURI=JavaScript URI
+marker.label.javascript.eventHandler=Batu gorandikaw
 
 # LOCALIZATION NOTE (marker.fieldFormat):
 # Some timeline markers come with details, like a size, a name, a js function.
@@ -56,7 +65,9 @@ marker.field.consoleTimerName=Waati diikaw maa:
 marker.field.DOMEventType=Batu dumi:
 marker.field.DOMEventPhase=Kanandi:
 # Non-incremental cause for a Garbage Collection marker
+marker.field.nonIncrementalCause=Tonton cindi-kurmakaw dalil:
 # For "Recalculate Style" markers
+marker.field.restyleHint=Fasal-taaga yaamar:
 # General "reason" for a marker (JavaScript, Garbage Collection)
 marker.field.causeName=Dalil:
 # General "type" for a marker (Cycle Collection, Garbage Collection)
@@ -70,6 +81,33 @@ marker.value.DOMEventBubblingPhase=Bulbul
 
 # LOCALIZATION NOTE (marker.gcreason.label.*):
 # These strings are used to give a concise but readable description of a GC reason.
+marker.gcreason.label.API=API ciyari
+marker.gcreason.label.EAGER_ALLOC_TRIGGER=Doonay feršiyan tunandi
+marker.gcreason.label.DESTROY_RUNTIME=Wii
+marker.gcreason.label.DESTROY_CONTEXT=Wii
+marker.gcreason.label.LAST_DITCH=Doo šii lakkaloo ra
+marker.gcreason.label.TOO_MUCH_MALLOC=Cebsu-ize booboyaŋ fersandi
+marker.gcreason.label.ALLOC_TRIGGER=Fersari booboyaŋ
+marker.gcreason.label.DEBUG_GC=GC hanse
+marker.gcreason.label.COMPARTMENT_REVIVED=Aduɲɲakul bukaw tunante
+marker.gcreason.label.RESET=Tontoni kuubiri benandi
+marker.gcreason.label.OUT_OF_NURSERY=Kaloo too
+marker.gcreason.label.EVICT_NURSERY=Kali furyanoo
+marker.gcreason.label.FULL_STORE_BUFFER=Kali haya-izey ga hansa ka dira
+marker.gcreason.label.SHARED_MEMORY_LIMIT=Fersari beero kaŋ
+marker.gcreason.label.PERIODIC_FULL_GC=Zaman žiibi margakaw too
+marker.gcreason.label.INCREMENTAL_TOO_SLOW=Fersari dimma ka hansa ka cahã
+marker.gcreason.label.COMPONENT_UTILS=Cu.forceGC
+marker.gcreason.label.MEM_PRESSURE=Lakkal yalaafante
+marker.gcreason.label.CC_WAITING=Kuubiri kuunari n'a waažibandi
+marker.gcreason.label.CC_FORCED=Kuubiri kuunari n'a waažibandi
+marker.gcreason.label.LOAD_END=Moo zumandiyan ben
+marker.gcreason.label.PAGE_HIDE=Ganandi bandafaari ga
+marker.gcreason.label.NSJSCONTEXT_DESTROY=JS šilbayboŋ halaci
+marker.gcreason.label.SET_NEW_DOCUMENT=Takadda taaga
+marker.gcreason.label.SET_DOC_SHELL=Takadda taaga
+marker.gcreason.label.DOM_UTILS=API ciyari
+marker.gcreason.label.DOM_IPC=IPC
 
 # LOCALIZATION NOTE (marker.gcreason.description.*):
 # These strings are used to give an expanded description of why a GC occurred.
