[mai] update from Pootle (firefox-beta)

--- a/mai/browser/chrome/browser/migration/migration.properties
+++ b/mai/browser/chrome/browser/migration/migration.properties
@@ -59,10 +59,13 @@ importedSafariReadingList=पठन सूची (सफारीसँ)
 32_edge=पसंदीदा
 32_safari=पुस्तकचिह्न
 32_chrome=पुस्तकचिह्न
+32_360se=पुस्तकचिह्न
 
 64_ie=आन आँकड़ा
+64_edge=आन डेटा
 64_safari=आन आँकड़ा
 64_chrome=आन आँकड़ा
 64_firefox_other=आन आँकड़ा
+64_360se=आन डेटा
 
 128_firefox=विंडोज आ टैब
