--- a/mai/webapprt/webapprt/overrides/appstrings.properties
+++ b/mai/webapprt/webapprt/overrides/appstrings.properties
@@ -29,6 +29,7 @@ externalProtocolUnknown=<अज्ञात>
 externalProtocolChkMsg=ई प्रकारेँ सभटा लिंकक लेल हमर पसिन्नकेँ याद राखू.
 externalProtocolLaunchBtn=अनुप्रयोग लाँच करू\u0020
 malwareBlocked=%S पर साइट केँ एकटा हमला साइटकेँ रूपेँ रिपोट कएल गेल अछि आओर अहाँक सुरक्षाक वरीयताक आधार पर रोकल गेल अछि.
+unwantedBlocked=%S पर साइट केँ हमला साइटक रूपेँ रिपोट कएल गेल अछि आओर अहाँक सुरक्षाक वरीयताक आधार पर रोकल गेल अछि.
 phishingBlocked=%S स्थित वेबसाइट केँ एकटा वेब धोखाधड़ीक रूपेँ रिपोट कएल गेल अछि जकरा प्रयोक्ता केँ निज अथवा वित्तीय सूचना गलत रूपसँ लेबाक लेल डिजायन कएल गेल अछि.
 cspBlocked=ई अनुप्रयोग सँ एकटा रिसोर्स धरि पहुँचबाक कोसिस कएल गेल जकरा में सुरक्षा पालिसी केर सामग्री हाएत अछि इहे खातिर एकरा लोड हए सँ रोकल गेल.
 corruptedContentError=अनुप्रयोग लोड कएना जारी नहि राखि सकैत अछि किएक डेटा प्रेषण मे त्रुटि केर पता लागल.
